@@ -312,6 +312,7 @@ class ColumnHeader(Canvas):
         popupmenu.add_command(label="Set Column Type", command=self.table.setColumnType)
         popupmenu.add_command(label="Create Categorical", command=self.table.getCategorical)
         popupmenu.add_command(label="Apply Function", command=self.table.applyFunction)
+        popupmenu.add_command(label="String Operation", command=self.table.applyStringMethod)
         popupmenu.bind("<FocusOut>", popupFocusOut)
         #self.bind("<Button-3>", popupFocusOut)
         popupmenu.focus_set()
